--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -163,4 +163,14 @@ url = {http://www.aaai.org/ocs/index.php/ICWSM/09/paper/view/154}
   url    = {https://neo4j.com/},
 }
 
+@Paper{ICWSM09154,
+  abstract   = {Gephi is an open source software for graph and network analysis. It uses a 3D render engine to display large networks in real-time and to speed up the exploration. A flexible and multi-task architecture brings new possibilities to work with complex data sets and produce valuable visual results.  We present several key features of Gephi in the context of interactive exploration and interpretation of networks. It provides easy and broad access to network data and allows for spatializing, filtering, navigating, manipulating and clustering. Finally, by presenting dynamic features of Gephi, we highlight key aspects of dynamic network visualization.},
+  author     = {Mathieu Bastian and Sebastien Heymann and Mathieu Jacomy},
+  conference = {International AAAI Conference on Web and Social Media},
+  keywords   = {network;network science;visualization;graph exploration;open source;free software;dynamic network;interactive interface;graph;force vector;java;OpenGL;3-D visualization;user-centric;graph layout;complex graph rendering;network analysis;webatlas},
+  title      = {Gephi: An Open Source Software for Exploring and Manipulating Networks},
+  url        = {https://www.aaai.org/ocs/index.php/ICWSM/09/paper/view/154},
+  year       = {2009},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
