--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -173,4 +173,12 @@ url = {http://www.aaai.org/ocs/index.php/ICWSM/09/paper/view/154}
   year       = {2009},
 }
 
+@Misc{Peltz2018,
+  author = {Rebecca Peltz},
+  month  = jun,
+  title  = {R: rank vs. order},
+  year   = {2018},
+  url    = {https://towardsdatascience.com/r-rank-vs-order-753cc7665951},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
